--- a/roots/Saved/Config/WindowsEditor/Engine.ini
+++ b/roots/Saved/Config/WindowsEditor/Engine.ini
@@ -29,14 +29,7 @@ Paths=../../../Engine/Plugins/Runtime/GeometryProcessing/Content
 Paths=../../../Engine/Plugins/Runtime/MeshModelingToolset/Content
 Paths=../../../Engine/Plugins/Runtime/ResonanceAudio/Content
 Paths=../../../Engine/Plugins/Runtime/Synthesis/Content
-
-[WindowsApplication.Accessibility]
-StickyKeysHotkey=False
-ToggleKeysHotkey=True
-FilterKeysHotkey=True
-StickyKeysConfirmation=False
-ToggleKeysConfirmation=False
-FilterKeysConfirmation=False
+Paths=../../../Engine/Plugins/Experimental/Landmass/Content
 
 [/Script/UdpMessaging.UdpMessagingSettings]
 EnabledByDefault=False
@@ -57,4 +50,16 @@ TunnelMulticastEndpoint=
 SDKPath=(Path="")
 NDKPath=(Path="")
 JavaPath=(Path="")
+
+[/Script/UnrealEd.UnrealEdEngine]
+TemplateMapInfos=(ThumbnailTexture=None,Thumbnail="/Engine/Maps/Templates/Thumbnails/OpenWorld",Map="/Engine/Maps/Templates/OpenWorld",DisplayName="Open World",Category="OpenWorld")
+TemplateMapInfos=(ThumbnailTexture=None,Thumbnail="/Engine/Maps/Templates/Thumbnails/Basic",Map="/Engine/Maps/Templates/Template_Default",DisplayName="Basic",Category="")
+
+[WindowsApplication.Accessibility]
+StickyKeysHotkey=False
+ToggleKeysHotkey=True
+FilterKeysHotkey=True
+StickyKeysConfirmation=True
+ToggleKeysConfirmation=True
+FilterKeysConfirmation=True
 
