--- a/roots/Config/DefaultInput.ini
+++ b/roots/Config/DefaultInput.ini
@@ -77,6 +77,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +ActionMappings=(ActionName="Pick up",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
 +ActionMappings=(ActionName="Drop",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
++ActionMappings=(ActionName="FlashLight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F)
 +AxisMappings=(AxisName="MoveX",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveX",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveY",Scale=-1.000000,Key=A)
